# animal-shelter-donation-thermometer

./: Cargo.toml  Dockerfile  README.md  justfile  sample-teams.csv  test-api.sh
src/: color_constants.rs  main.rs  storage.rs  thermometer.rs
static/: styles.css
systemd/: animal-shelter-thermometer.service
templates/: admin.html  base.html  faq.html  home.html
